:paperclip: Move icon and raw-svg components to a common subdir

--- a/frontend/src/app/main/ui/ds/foundations/assets/icon.mdx
+++ b/frontend/src/app/main/ui/ds/foundations/assets/icon.mdx
@@ -41,7 +41,7 @@ Assuming the namespace is required as `i`:
 ```clj
 (ns app.main.ui.foo
   (:require
-   [app.main.ui.ds.foundations.icon :as i]))
+   [app.main.ui.ds.foundations.assets.icon :as i]))
 ```
 
 You can now use the icon IDs defined in the namespace:
