--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -5567,7 +5567,7 @@ msgstr "Leer y modificar el contenido de sus archivos."
 
 #: src/app/main/ui/workspace/plugins.cljs:274
 msgid "workspace.plugins.permissions.disclaimer"
-msgstr "Tenga en cuenta que esta extensión ha sido desarrollada por terceros."
+msgstr "Tenga en cuenta que las extensiones están desarrolladas por terceros, asegursé que confía antes de conceder el permiso. Su privacidad y seguridad es importante para nosotros. Si tiene cualquier duda, contacte soporte."
 
 #: src/app/main/ui/workspace/plugins.cljs:271
 msgid "workspace.plugins.permissions.library-read"
@@ -5576,6 +5576,15 @@ msgstr "Leer la información de sus bibliotecas y recursos."
 #: src/app/main/ui/workspace/plugins.cljs:265
 msgid "workspace.plugins.permissions.library-write"
 msgstr "Leer y modificar la información de sus bibliotecas y recursos."
+
+msgid "workspace.plugins.permissions.comment-read"
+msgstr "Leer tus comentarios y respuestas."
+
+msgid "workspace.plugins.permissions.comment-write"
+msgstr "Leer y modificar tus comentarios y responder en tu nombre."
+
+msgid "workspace.plugins.permissions.allow-download"
+msgstr "Comenzar descargas de ficheros."
 
 #: src/app/main/ui/workspace/plugins.cljs:236
 msgid "workspace.plugins.permissions.title"
